style: add overflow: scroll to body to prevent unwanted browser behavior

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,6 +12,7 @@ header {
 
 body {
   font-family: sans-serif;
+  overflow: scroll;
 }
 
 .container {
